# ReTiSAR

./: .editorconfig  .gitignore  .pep8speaks.yml  AUTHORS  CHANGE_LOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  environment_dev.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: build-jekyll.yml  jekyll.yml
ReTiSAR/: __init__.py  __main__.py  _compensation.py  _convolver.py  _data_retriever.py  _filter_set.py  _jack_client.py  _jack_generator.py  _jack_player.py  _jack_renderer.py  _multiprocessing.py  _remote.py  _run.py  _run_benchmark.py  _run_dev.py  _run_validation.py  _subprocess.py  _tracker.py  config.py  process_logger.py  tools.py
res/: .gitignore  OSC_Remote_Demo.pd  OSC_Route_Client.pd  reset_value.pd
res/ARIR/: CR1_VSA_50RS_L_struct.mat  DRIR_CR1_VSA_110OSC_L.sofa.source  DRIR_CR1_VSA_110OSC_R.sofa.source  DRIR_CR1_VSA_110RS_L.sofa.source  DRIR_CR1_VSA_110RS_R.sofa.source  DRIR_CR1_VSA_1202RS_L.sofa.source  DRIR_CR1_VSA_1202RS_R.sofa.source  DRIR_CR1_VSA_50RS_L.sofa.source  DRIR_CR1_VSA_50RS_R.sofa.source  DRIR_CR1_VSA_86RS_L.sofa.source  DRIR_CR1_VSA_86RS_R.sofa.source  DRIR_CR7_VSA_110RS_L.sofa.source  DRIR_CR7_VSA_110RS_R.sofa.source  DRIR_CR7_VSA_1202RS_L.sofa.source  DRIR_CR7_VSA_1202RS_R.sofa.source  DRIR_CR7_VSA_146OSC_L.sofa.source  DRIR_CR7_VSA_146OSC_R.sofa.source  DRIR_CR7_VSA_50RS_L.sofa.source  DRIR_CR7_VSA_50RS_R.sofa.source  DRIR_CR7_VSA_86RS_L.sofa.source  DRIR_CR7_VSA_86RS_R.sofa.source  (+56 more)
(+87 files in other folders)
