[project]
name = 'ReTiSAR'
description = 'Real-Time Spherical Array Renderer for binaural reproduction in Python'
authors = ['Hannes Helmholz <hannes.helmholz@chalmers.se>']
keywords = ['binauralaudio', 'signal-processing', 'microphone-array-processing', 'python', '3d-audio']
readme = 'README.md'
homepage = ''
repository = 'https://github.com/AppliedAcousticsChalmers/ReTiSAR'
documentation = ''
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'License :: Other/Proprietary License',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Multimedia :: Sound/Audio',
]

[dependencies]
jack-client = '^0.4.4'
matplotlib = '*'
numpy = '^1.15.4'
#psutil = '*'  # for adjusting process priority, currently not used
pyfftw = '*'
python = '^3.7'
python-osc = '*'
pyserial = '^3.4'
pysofaconventions = '^0.1.5'
samplerate = '*'
scipy = '*'
soundfile = '^0.10.2'
sound_field_analysis = '^2019.8.15'

[dev-dependencies]
black = '^19.10b0'  # for code formatting
jinja2 = '*'  # for benchmarking
natsort = '*'  # for benchmarking
pandas = '*'  # for benchmarking

[tool.black]
line-length = 88
target-version = ['py37','py38']
include = './ReTiSAR/'
exclude = 'dev/'
